tests/rosetta/out/Smalltalk/animate-a-pendulum.out
/workspace/mochi/tests/rosetta/out/Smalltalk/animate-a-pendulum.st:10: parse error, expected integer literal or floating-point literal or decimal literal
