tests/rosetta/out/Smalltalk/animate-a-pendulum.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| G L PI cosApprox denom dt guess i n omega phi phi0 pos sinApprox sqrtApprox sum t term |
PI := 3.141592653589793.
sinApprox := [:x | term := x.
sum := x.
n := 1.
[(n <= 10)] whileTrue: [
  denom := ((2 * n) * ((2 * n) + 1)) asFloat.
  term := (((-term * x) * x) / denom).
  sum := (sum + term).
  n := (n + 1).
]
.
sum ].
cosApprox := [:x | term := 1.
sum := 1.
n := 1.
[(n <= 10)] whileTrue: [
  denom := (((2 * n) - 1) * (2 * n)) asFloat.
  term := (((-term * x) * x) / denom).
  sum := (sum + term).
  n := (n + 1).
]
.
sum ].
sqrtApprox := [:x | guess := x.
i := 0.
[(i < 10)] whileTrue: [
  guess := ((guess + (x / guess)) / 2).
  i := (i + 1).
]
.
guess ].
L := 10.
G := 9.81.
dt := 0.2.
phi0 := (PI / 4).
omega := sqrtApprox value: (G / L).
t := 0.
0 to: 10 do: [:step |
  phi := (phi0 * cosApprox value: (omega * t)).
  pos := ((10 * sinApprox value: phi) + 0.5) asInteger.
  Transcript show: ((pos asString)) printString; cr.
  t := (t + dt).
]
.
